--- a/src/styles/blocks/page-header.less
+++ b/src/styles/blocks/page-header.less
@@ -1,76 +1,47 @@
-.page-header {
+.page-header{
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
-  align-items: center;
   width: 100%;
   height: 147px;
-  background-color: rgba(222, 222, 222, 0.98);
-  z-index: 10;
+  background-color: rgba(222, 222, 222, 0.5);
+  backdrop-filter: blur(20px);
+  z-index: 100;
 
-  &__container {
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    max-width: 1414px;
-    margin: 0 auto;
-    padding-left: 40px;
-    padding-right: 40px;
+  &__container{
+      .container();
+      display: flex;
+      align-items: center;
+
   }
-
-  &__logo {
-    flex-shrink: 0;
-    width: 202px;
-    height: 147px;
-    font-size: 0;
-    text-decoration: none;
-    
-    &-icon {
+  &__logo{
+      flex-shrink: 0;
+      width: 202px;
+      height: 147px;
+      font-size: 0;
+      text-decoration: none;
+  }
+  &__logo-icon{
       width: 100%;
       height: 100%;
-    }
   }
-
-  &__nav {
-    display: flex;
-    align-items: baseline;
-    margin: 0 auto;
-    &-link {
-      margin: 0 25px;
-      color: @black;
-      font-family: @font1;
-      font-weight: 600;
-      font-size: 18px;
-      line-height: 25px;
+  &__nav{
+      display: flex;
+      align-items: baseline;
+      gap: 50px;
+      margin: 0 auto;
+  }
+  &__nav-link{
       text-decoration: none;
+      flex-wrap: nowrap;
+      font-size: 18px;
+      font-weight: 600;
+      line-height: 1.3;
+      color: #1F1E1E;
       transition: color 0.2s;
-
-      &:hover {
-        color: @red;
-      }
-    }
-    
   }
-  &__right-block {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 202px;
-    text-decoration: none;
-  }
-  &__user-btn {
-    color: @black;
-    background-color: transparent;
+  &__nav-link:hover,
+  &__nav-link:active{
+      color: @red_dark;
   }
 }
-
-@supports (backdrop-filter: blur(20px)) {
-  .page-header {
-    background-color: fade(@gray, 70%);
-    backdrop-filter: blur(20px);
-  }
-}
-
-
