--- a/src/styles/global/allstyles.less
+++ b/src/styles/global/allstyles.less
@@ -7,22 +7,28 @@ html,
 body {
   width: 100%; 
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
-.body {
+body{
   box-sizing: border-box;
-  position: relative;
   display: flex;
   flex-direction: column;
-  width: 1920px;
   min-height: 100vh;
-  padding-top: 147px;
+  background-color: @gray;
+  background-image: url(../assets/images/noise.png), url(../assets/images/bg1920.png);
+  background-position: 0 0, 0 0;
+  background-size: auto, 100% auto;
+  background-repeat: repeat, repeat-y;
   color: @black;
   font-family: @font1;
   font-size: 16px;
   font-weight: 400;
   font-style: normal;
   line-height: 1.375;
+  overflow-x: hidden;
+  padding-top: 147px;
 }
 
 .main {
